--- a/src/components/Comment/Comment.module.css
+++ b/src/components/Comment/Comment.module.css
@@ -11,13 +11,19 @@
 }
 
 .User{
-    display: inline-block;
     color: steelblue;
     position: relative;
-    top: -17px;
+    top: -6px;
     margin-left: 10px;
 }
 
+.Date{
+    color: lightgray;
+    font-size: 11px;
+    margin-left: 10px;
+    position: relative;
+    top: -5px
+}
 .Line{
     background-color: #d3d3d3;
     margin: 15px 10px 0 10px;
@@ -26,6 +32,6 @@
 }
 
 .TextArea{
-    width: 90%;
-    margin: 0 10px 20px 10px;
+    width: 95%;
+    margin: 0 10px 10px 10px;
 }
