Added Product Quantity Manager and Product Details table

--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -1,6 +1,7 @@
 .Modal {
   position: fixed;
-  display: block;
+  display: flex;
+  flex-direction: column;
   z-index: 10000;
   background-color: white;
   width: 944px;
